bootJar {
    enabled = true
    mainClass.set("com.hbc.item.MasterDataItemApplication")
}

buildscript {
    repositories {
        maven {
            url "https://plugins.gradle.org/m2/"
        }
    }
    dependencies {
        classpath "com.commercehub.gradle.plugin:gradle-avro-plugin:0.22.0"
    }
}

apply plugin: "com.commercehub.gradle.plugin.avro"

configurations {
    [apiElements, runtimeElements].each {
        it.outgoing.artifacts.removeIf { it.buildDependencies.getDependencies(null).contains(jar) }
        it.outgoing.artifact(bootJar)
    }
}

dependencies {
    implementation(project(":item:item-api-domain"))
    runtimeOnly 'org.postgresql:postgresql'
    implementation 'com.vladmihalcea:hibernate-types-52:2.16.2'
    implementation "org.apache.avro:avro:1.11.0"
    implementation(project(":common-util"))
}

generateAvroJava {
    source("${projectDir}/src/main/resources/avro")
    outputDir = file("${projectDir}/build/generated")
}

spotless {
    java {
        targetExclude("build/generated/**/*.java")
    }
}

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11
